feat(game): 添加悬赏系统和修仙命令处理器
- 新增 BountyService 实现悬赏功能，包括接取、完成、放弃悬赏
- 添加 CultivationCommandHandler 处理修仙相关命令和文本格式化
- 创建 BreakthroughResult VO 类封装突破结果数据
- 更新 BeastQuality 枚举移除冗余注释和方法
- 集成 LLM 美化悬赏完成描述和探索事件